--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,8 +2,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: gray;
+    background-color: rgb(19, 43, 12);
 }
 canvas {
     border: 1px solid black;
+    background-color: rgb(133, 183, 90);
 }
