--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,4 +7,6 @@ body {
 canvas {
     border: 1px solid black;
     background-color: rgb(133, 183, 90);
+      image-rendering: pixelated;
+  image-rendering: crisp-edges;
 }
