--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,63 @@
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(19, 43, 12);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  flex-direction: column;
+  background-color: rgb(19, 43, 12);
+  background-image: url(/assets/images/bg-static.jpg);
+  background-size: cover;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 canvas {
-    border: 1px solid black;
-    background-color: rgb(133, 183, 90);
-      image-rendering: pixelated;
+  border: 4px ridge #bd8216;
+  box-shadow: 0 0 20px #d4b46a;
+  border-radius: 5px;
+  background-color: rgb(133, 183, 90);
+  image-rendering: pixelated;
   image-rendering: crisp-edges;
+}
+
+#main-canvas {
+}
+
+.menu-ingame {
+  display: flex;
+  justify-content: space-between;
+  width: 600px;
+  margin: 5px;
+  font-family: fantasy;
+}
+
+#title-text {
+  width: 25%;
+}
+
+#timer {
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  width: 25%;
+  color: rgb(245, 191, 54);
+  text-shadow: 2px 2px 4px #000000;
+  font-size: 40px;
+  text-align: center;
+}
+
+#pause-button {
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-shadow: 2px 2px 4px #000000;
+  border-color: #d4b46a;
+  color: rgb(245, 191, 54);
+  font-size: 20px;
+
+  background-color: rgba(0, 0, 0, 0.322);
+  width: 25%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #00000050;
+}
+#pause-button:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.5);
 }
