--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,7 +70,6 @@ canvas {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-/* Overlay de Game Over */
 #gameover-menu {
   position: absolute;
   top: 50%;
@@ -78,10 +77,23 @@ canvas {
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   gap: 10px;
+  width: 90%;
+  height: 90%;
 }
+
+#gameover-menu img {
+  width: 100%; /* se adapta al width del contenedor */
+  height: auto; /* mantiene proporciones */
+}
+
 
 .hidden {
   display: none !important;
+}
+
+.clickable {
+  cursor: pointer;
 }
