--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,13 +42,13 @@ canvas {
   box-shadow: 0 0 20px #d4b46a;
   border-radius: 5px;
   background-color: rgb(133, 183, 90);
-
   image-rendering: pixelated;
   image-rendering: crisp-edges;
-
   width: 100%;
   height: 100%;
   display: block;
+
+  touch-action: none;
 }
 
 /* =========================================================
